Imagem principal alterada

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					 <div class="slider-img oneimg">
 						<div class="container">
 						   <div class="slider-info">
-							  <img class="logomarca" src="images/logo-bioforma.png" />
+							  <img class="logomarca" style="max-width: 400px;" src="images/bioforma_logo.png" />
 						   </div>
 						</div>
 					 </div>
