Seção Tratamentos faciais criada

--- a/index.html
+++ b/index.html
@@ -138,6 +138,70 @@
 			</div>
 		 </div>
 		 <!--//About-->
+		 <!-- Tratamento Faciais -->
+		 <div id="servicosecao" style="background:url(images/tratamentosfaciais_bg.jpg)">
+		<div class="container">
+		
+	    <div class="col-md-12"><h1>Tratamentos Faciais</h1></div>
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Botox</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Preenchimento facial</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Peeling quimico</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Hidratação profunda de pele</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Tratamento de flacidez da pele</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Clareamento de manchas facial e corporal</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Peeling de diamante</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+        <!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Limpeza de pele</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->		
+        </div>		
+		</div>
+		 
+		 
 		 <!-- services -->
 		 <div class="services" id="services">
 			<h3 class="title clr">Tratamentos de Estética Oferecidos</h3>
@@ -325,7 +389,7 @@
 			</div>
 			<div class="clearfix"> </div>
 		 </div>
-		 </div>
+		 </div> -->
 		 <!-- //services-->
 		 <!-- gallery-->
 		 <div id="gallery" class="gallery">
