Seção Tratamentos corporais criada

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 			</div>
 		 </div>
 		 <!--//About-->
-		 <!-- Tratamento Faciais -->
-		 <div id="servicosecao" style="background:url(images/tratamentosfaciais_bg.jpg)">
-		<div class="container">
-		
+		 
+		<!-- TRATAMENTOS FACIAIS -->
+		<div id="servicosecao" style="background:url(images/tratamentosfaciais_bg.jpg)">
+		<div class="container">		
 	    <div class="col-md-12"><h1>Tratamentos Faciais</h1></div>
 		<!-- Começa as especialidade -->
         <div class="col-md-4 col-xs-4 servico">
@@ -200,200 +200,118 @@
         <!-- Termina especialidade -->		
         </div>		
 		</div>
+		<!-- FIM TRATAMENTOS FACIAIS -->
+		
+		
+		
+		
+		<!-- TRATAMENTOS CORPORAIS -->
+		 <div id="servicosecao" style="background:url(images/tratamentoscorporaiss_bg.jpg)">
+		<div class="container">
+		
+	    <div class="col-md-12"><h1>Tratamentos Corporais</h1></div>
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Tratamentos para gordura localizada</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Tratamentos para celulite</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Aplicação de vasinhos (PEIM)</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Tratamentos para estrias</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>PumpUp</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Lipo Enzimática</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Criolipólise</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Carboxterapia</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+		<!-- Termina especialidade -->
+		
+        <!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Corrente Russa</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+
+        <!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Massagem Redutora</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Drenagem linfática</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+				
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Tratamento Capilar</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+		<!-- Começa as especialidade -->
+        <div class="col-md-4 col-xs-4 servico">
+		<h2>Depilação a Laser</h2>
+		<!--<p>Descrição</p>-->
+		</div>
+        <!-- Termina especialidade -->
+		
+        </div>		
+		</div>
+		<!-- FIM TRATAMENTOS CORPORAIS -->
 		 
 		 
-		 <!-- services -->
-		 <div class="services" id="services">
-			<h3 class="title clr">Tratamentos de Estética Oferecidos</h3>
-			<div class="container">
-			   <div class="banner-bottom-girds">
-				  <div class="col-md-4 ban-ser-left-agile">
-					 <div id="especializacaoFacial" class="service-list">
-						<h4>Estética Facial</h4>
-						<p>
-						   Clique para ver os tratamentos
-						</p>
-					 </div>
-					 <div id="especializacaoCorporal" class="service-list">
-						<h4>Estética Corporal</h4>
-						<p>
-						   Clique para ver os tratamentos
-						</p>
-					 </div>
-				  </div>
-				  <div class="col-md-8 ban-ser-right-agile">
-					 <div id="topicosEspecializacaoFacial">
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr1">
-							  <a href="limpeza-de-pele-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Limpeza de pele</h2>
-									<p>Indicado para remoção de impurezas da pele, cravos, espinhas, controle de oleosidade e melhor penetração de
-									   principois ativos
-									</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr2">
-							  <a href="lifting-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Lifting</h2>
-									<p>Procedimento que visa a atenuação de rugas e linhas de expressão, além de proporcionar uma hidratação profunda da pele</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr3">
-							  <a href="peeling-quimico-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Peeling químico</h2>
-									<p>Promove o rejuvenescimento facial, pois trata rugas e aumenta a elasticidade da pele. Além disso, também é indicado para o tratamento da acne, marcas de acne, manchas faciais e pintas nas costas das mãos</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr4">
-							  <a href="peeling-diamante-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>
-									Peeling de Diamante</h2
-									<p>Indicado para o tratamento de pele oleosa, acne, cicatriz de acne, manchas, sardas, pequenas rugas, poros dilatados e estrias, além de promover o rejuvenecimento facial.</p>
-								 </div>
-								 >
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr1">
-							  <a href="clareamento-de-manchas-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Clareamento de manchas</h2>
-									<p>Procedimento onde são aplicados produtos especificos de clareamento, tratando diretamente as manchas.</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr2">
-							  <a href="drenagem-facial-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Drenagem Facial</h2>
-									<p>Procedimento que ajuda a estimular o fluxo linfático. O objetivo da drenagem é preventivo, estético e teraupêutico. Indicada para pós operatórios, rejuvencimento facil, tratamento de acne e olheiras</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr3">
-							  <a href="#">
-								 <div class="white-right">
-									<h2>Detox facial</h2>
-									<p>Procedimento que proporciona uma desintoxicação da pele, eliminando toxinas e estimulando o a microcirculação cutânea.</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-					 </div>
-					 <div id="topicosEspecializacaoCorporal">
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr1">
-							  <a href="drenagem-linfatica-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Drenagem linfática</h2>
-									<p>Técnica de massagem que estimula o sistema linfático a trabalhar de uma forma mais rápida, auxiliando o organismo a eliminar as toxinas resultantes do trabalho do metabolismo e drenar os líquidos que possam estar retidos</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr2">
-							  <a href="massagem-modeladora-redutora-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Massagem modeladora/redutora</h2>
-									<p>É uma técnica de massagem intensificada com ritmo acelerado e alta pressão, com auxilio de ativos. Seu objetivo e modelar o corpo, redistribuir a gordura existente, reduzir mediadas e diminiuir celulite</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr3">
-							  <a href="massagem-relaxante-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Massagem relaxante</h2>
-									<p>Essa técnica tem como foco promover a sensação de bem estar físico e psiquico, combatendo a fadiga fisica e mental atraves de manobras especificas</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr4">
-							  <a href="bandagem-fria-crioterapia-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Bandagem fria (Crioterapia)</h2>
-									<p>É a terapia por meio do frio e aplicação de ativos,  indicada para celulite, gordura localizada e flacidez</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr1">
-							  <a href="bandagem-quente-termoterapia-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Bandagem quente (Termoterapia)</h2>
-									<p>É a terapia por meio do calor e aplicação de ativos,  indicada para celulite e gordura localizada</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr2">
-							  <a href="bandagem-choque-termico-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Bandagem choque térmico</h2>
-									<p>É um procedimento que combina calor e frio, estimulando corpo a aumentar as trocas metabolicas, dessa forma forçando organismo a gastar a energia das células de gordura. Indicada para celulite, gordura localizada e flacidez</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-						<div class="col-md-6 col-xs-6 its-banner-grid gird-ser-clr2">
-						   <div class="white-shadow scr3">
-							  <a href="bandagem-gessada-gessoterapia-em-Bairro Santa Inês Belo Horizonte.html">
-								 <div class="white-right">
-									<h2>Bandagem gessada (Gessoterapia)</h2>
-									<p>É um tratamento com ultilização de gessso. O efeito oclusivo proporciona maior penetração de principios ativos, ativa a circulação sanguinea e linfática, e aumenta o metabolismo celular. Indicada para celulite, gordura localizada e modelagem corporal</p>
-								 </div>
-							  </a>
-							  <div class="clearfix"> </div>
-						   </div>
-						</div>
-					 </div>
-				  </div>
-			   </div>
-			</div>
-			<div class="clearfix"> </div>
-		 </div>
-		 </div> -->
-		 <!-- //services-->
+		 
 		 <!-- gallery-->
 		 <div id="gallery" class="gallery">
-			<h3 class="title">Conheça um pouco mais do meu trabalho</h3>
+		 <div class="container">		
+	     <div class="col-md-12">
+			<h3 class="title">CONHEÇA A CLÍNICA</h3>
 			<div class="gallery-imges">
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids">
 				  <a href="images/proc-drenagem-linfatica.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
@@ -464,7 +382,7 @@
 			   </div>
 			   <div class="clearfix"> </div>
 			</div>
-		 </div>
+		 </div> </div> </div>
 		 <!-- //gallery-->
 		 <!-- team-->
 		 <div class="team" id="team">
