Galeria fotod clinica criada

--- a/index.html
+++ b/index.html
@@ -314,68 +314,89 @@
 			<h3 class="title">CONHEÇA A CLÍNICA</h3>
 			<div class="gallery-imges">
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids">
-				  <a href="images/proc-drenagem-linfatica.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-drenagem-linfatica.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0097.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0097.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Drenagem Linfática</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids">
-				  <a href="images/proc-lifting.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-lifting.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0103.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0103.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Lifting</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids">
-				  <a href="images/proc-limpeza-de-pele.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-limpeza-de-pele.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0114.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0114.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Limpeza de Pele Profunda</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids">
-				  <a href="images/proc-limpeza-de-pele-profunda.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-limpeza-de-pele-profunda.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0115.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0115.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Limpeza de Pele Profunda</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids grid-mdl">
-				  <a href="images/proc-massagem-relaxante.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-massagem-relaxante.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0120.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0120.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Massagem Relaxante</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
-				  <a href="images/proc-massagem-modeladora.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-massagem-modeladora.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0122.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0122.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Massagem Modeladora</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
-				  <a href="images/proc-massagem-modeladora-1.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-massagem-modeladora-1.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0133.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0133.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Massagem Modeladora</h4>
-				  </div>
 			   </div>
 			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
-				  <a href="images/proc-peeling-quimico.jpg" class="gallery-box" data-lightbox="example-set" data-title="">
-				  <img src="images/proc-peeling-quimico.jpg" alt="" class="img-responsive zoom-img">
+				  <a href="images/clinica/IMG_0140.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0140.JPG" alt="" class="img-responsive zoom-img">
 				  </a>
-				  <div class="gallery-info">
-					 <h4>Peeling Químico</h4>
-				  </div>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0144.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0144.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0154.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0154.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0155.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0155.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0162.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0162.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0165.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0165.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0175.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0175.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0179.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0179.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0182.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0182.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
+			   </div>
+			   <div class="col-md-3 col-sm-6 col-xs-6 gallery-grids  grid-mdl">
+				  <a href="images/clinica/IMG_0185.JPG" class="gallery-box" data-lightbox="example-set" data-title="">
+				  <img src="images/clinica/IMG_0185.JPG" alt="" class="img-responsive zoom-img">
+				  </a>
 			   </div>
 			   <div class="col-md-12 col-sm-12 col-xs-12">
 				  <div class="sharethis-inline-follow-buttons"></div>
