Link Whatsapp e Instagram alterados

--- a/index.html
+++ b/index.html
@@ -415,13 +415,13 @@
                  <!-- Widget em linha do Calendly - fim -->				
 				  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/b644e52830b85622924b91ea6eccfa3b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 				  <p>
-					 <a href="https://instagram.com/bioformaestetica" class="cta-instagram">
+					 <a href="https://instagram.com/bioforma_bh" class="cta-instagram">
 					 <i class="fa fa-instagram"></i>
 					 Siga Meu Instagram
 					 </a>
 				  </p>
 				  <p style="margin-top: 10px;">
-					 <a href="https://goo.gl/kRwpmx" class="cta-whatsapp">
+					 <a href="https://api.whatsapp.com/send?phone=5531998919143" class="cta-whatsapp">
 					 <i class="fa fa-whatsapp"></i>
 					 Tire suas dúvidas no Whatsapp
 					 </a>
