--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			}
 		 </script>
 		 <!--//meta tags ends here-->
+		 <link rel='icon' href='images/bioforma_favicon.png' type='image/x-icon'/ >
 		 <!--booststrap-->
 		 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 		 <!--//booststrap end-->
