Seção calendly aumentada

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 		 <!-- team-->
 		 <div class="team" id="team">
 			<div class="container">
-			   <div class="col-md-8 col-xs-12 welcome-left-left">
+			   <div class="col-md-12 col-xs-12 welcome-left-left">
 				 <!-- Widget em linha do Calendly - início -->
                  <div class="calendly-inline-widget" data-url="https://calendly.com/bioforma2018/agendamento" style="min-width:320px;height:630px;"></div>
                  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
@@ -423,9 +423,9 @@
 					 </a>
 				  </p>
 			   </div>
-			   <div class="col-md-4 col-xs-12 welcome-left">
+			   <!--<div class="col-md-4 col-xs-12 welcome-left">
 				  <img src="images/bioforma-esteticista.png">
-			   </div>
+			   </div>-->
 			   <div class="clearfix"> </div>
 			</div>
 		 </div>
