--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                  <div class="calendly-inline-widget" data-url="https://calendly.com/bioforma2018/agendamento" style="min-width:320px;height:630px;"></div>
                  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
                  <!-- Widget em linha do Calendly - fim -->				
-				  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/b644e52830b85622924b91ea6eccfa3b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+				  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/b644e52830b85622924b91ea6eccfa3b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 				  <p>
 					 <a href="https://instagram.com/bioforma_bh" class="cta-instagram">
 					 <i class="fa fa-instagram"></i>
