Local rodapé corrigido

--- a/index.html
+++ b/index.html
@@ -432,12 +432,9 @@
 		 <footer>
 			<div class="container">
 			   <div class="col-md-3">
-				  <h3>Locais Fixos de Atendimento</h3>
+				  <h3>Locais de Atendimento</h3>
 				  <p>
-					 Avenida Prudente de Morais, 290, loja 6 e 7, bairro Cidade Jardim - Belo Horizonte/MG
-				  </p>
-				  <p>
-					 Rua Vinte e Nove, 264, bairro Tropical - Bairro Santa Inês Belo Horizonte/MG
+					 Rua Iguatama, 73 loja 101 - Bairro Santa Inês - Belo Horizonte/MG
 				  </p>
 			   </div>
 			   <div class="col-md-3">
