Logo Alterada e Imagem sobre alterada

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					 <div class="slider-img oneimg">
 						<div class="container">
 						   <div class="slider-info">
-							  <img class="logomarca" style="max-width: 400px;" src="images/bioforma_logo.png" />
+							  <img class="logomarca" style="max-width: 400px;" src="images/logo_bioforma.png" />
 						   </div>
 						</div>
 					 </div>
@@ -104,36 +104,9 @@
 					 Realizo diversos procedimentos de estética na sua casa, de acordo com sua agenda, horário e dia da semana.
 				  </p>
 			   </div>
-			   <div class="col-md-3 col-xs-6 welcome-left">
+			   <div class="col-md-6 col-xs-6 welcome-left">
 				  <div class="image-abt">
-					 <img src="images/antes-1.jpg" alt="Beauty">
-					 <div class="view-caption">
-						<h5>Antes</h5>
-						<span class="fa fa-search"></span>
-					 </div>
-				  </div>
-				  <div class="image-abt">
-					 <img src="images/depois-1.jpg" alt="Beauty">
-					 <div class="view-caption">
-						<h5>Depois</h5>
-						<span class="fa fa-search"></span>
-					 </div>
-				  </div>
-			   </div>
-			   <div class="col-md-3 col-xs-6 welcome-left-to">
-				  <div class="image-abt">
-					 <img src="images/antes-2.jpg" alt="Beauty">
-					 <div class="view-caption">
-						<h5>Antes</h5>
-						<span class="fa fa-search"></span>
-					 </div>
-				  </div>
-				  <div class="image-abt">
-					 <img src="images/depois-2.jpg" alt="Beauty">
-					 <div class="view-caption">
-						<h5>Depois</h5>
-						<span class="fa fa-search"></span>
-					 </div>
+					 <img src="images/principal_bg-nocolor.jpg" alt="Beauty">
 				  </div>
 			   </div>
 			</div>
