Logo e texto sobre a empresa corrigidos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					 <div class="slider-img oneimg">
 						<div class="container">
 						   <div class="slider-info">
-							  <img class="logomarca" style="max-width: 400px;" src="images/logo_bioforma.png" />
+							  <img class="logomarca" style="max-width: 400px;" src="images/logo_bioforma_white.png" />
 						   </div>
 						</div>
 					 </div>
@@ -98,10 +98,14 @@
 		 <div class="about" id="about">
 			<div class="container">
 			   <div class="col-md-6 welcome-left-left">
-				  <h1>Tratamentos de Estética à Domicílio em Belo Horizonte e Bairro Santa Inês Belo Horizonte</h1>
-				  <p style="margin-top: 20px;">
-					 Profissional formada em administração pela FUMEC e formada no curso de estética integral na Escola Toque Natural, atuando na área há mais de 1 ano.
-					 Realizo diversos procedimentos de estética na sua casa, de acordo com sua agenda, horário e dia da semana.
+				  <p >
+					 Fundada em 2018, a clínica de estética avançada Bioforma foi pensada em seus clientes com muito carinho, trazendo sempre o melhor em termos de profissionais, tecnologia e medicamentos.<br>
+					 <br>
+A responsável pela clínica, Gabriela Ramalho, é biomédica especialista em estética desde 2012, e possui diversos cursos de aprimoramento na área.<br>
+<br>
+Honestidade e ética é o nosso lema. Somos todos indivíduos únicos, e para que possamos identificar o melhor tratamento para cada um, sempre fazemos uma avaliação prévia onde podemos nos conhecer melhor para chegar a um melhor resultado.<br>
+<br>
+Venha conhecer nosso trabalho!
 				  </p>
 			   </div>
 			   <div class="col-md-6 col-xs-6 welcome-left">
